# langgraph-memory

./: .env.sample  .gitignore  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
langgraph_memory/: hosting.py  main.py  server.py
langgraph_memory/protocols/: i_memory_store.py
langgraph_memory/services/: azure_openai_service.py  memory_store.py
tests/langgraph_memory/services/: test_azure_openai_service.py  test_memory_store.py
